--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@
 export("%>%")
 export(na_check)
 export(summary_mean_circular)
+export(summary_median_circular)
 export(summary_mode)
 importFrom(magrittr,"%>%")
