--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(na_check)
 export(summary_mean_circular)
+export(summary_medianHL_circular)
 export(summary_median_circular)
 export(summary_mode)
 importFrom(magrittr,"%>%")
