--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,5 +16,6 @@ export(summary_mode)
 export(summary_quantile_circular)
 export(summary_rho_circular)
 export(summary_sd_circular)
+export(summary_trimmed_mean)
 export(summary_var_circular)
 importFrom(magrittr,"%>%")
