--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(summary_min_circular)
 export(summary_mode)
 export(summary_quantile_circular)
 export(summary_rho_circular)
+export(summary_sd)
 export(summary_sd_circular)
 export(summary_trimmed_mean)
 export(summary_var_circular)
