--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,6 @@ export(summary_quantile_circular)
 export(summary_rho_circular)
 export(summary_sd_circular)
 export(summary_trimmed_mean)
+export(summary_var)
 export(summary_var_circular)
 importFrom(magrittr,"%>%")
