--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(summary_ang_dev_circular)
 export(summary_ang_var_circular)
 export(summary_count)
 export(summary_count_missing)
+export(summary_max)
 export(summary_max_circular)
 export(summary_mean)
 export(summary_mean_circular)
