--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(summary_median_circular)
 export(summary_min_circular)
 export(summary_mode)
 export(summary_quantile_circular)
+export(summary_range)
 export(summary_rho_circular)
 export(summary_sd_circular)
 export(summary_trimmed_mean)
