--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(summary_count_missing)
 export(summary_max_circular)
 export(summary_mean)
 export(summary_mean_circular)
+export(summary_median)
 export(summary_medianHL_circular)
 export(summary_median_circular)
 export(summary_min_circular)
