--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,12 @@ export(summary_count_missing)
 export(summary_max_circular)
 export(summary_mean)
 export(summary_mean_circular)
+export(summary_median)
 export(summary_medianHL_circular)
 export(summary_median_circular)
 export(summary_min_circular)
 export(summary_mode)
+export(summary_quantile)
 export(summary_quantile_circular)
 export(summary_rho_circular)
 export(summary_sd_circular)
